# rust-dynlinker

./: Cargo.toml
.github/workflows/: rust.yml
example-dylib/src/: lib.rs
examples/: symbol_info.rs
rtld/impl/: Cargo.toml
rtld/impl/src/: globals.rs  lib.rs  runtime.rs  symbols.rs  tls.rs
rtld/impl/src/arch/x86_64/: entry.rs  mod.rs
rtld/impl/src/bootstrap/: mod.rs  publish.rs  stack.rs  stage0.rs  stage1.rs  stage2.rs  state.rs
rtld/impl/src/glibc/: mod.rs
rtld/impl/src/glibc/v2_39/: mod.rs  tls.rs
rtld/impl/src/symbols/: audit.rs  cpu.rs  debug.rs  dlfcn.rs  error.rs  find.rs  serinfo.rs  tls.rs  tunables.rs
src/: abi.rs  host_init.rs  lib.rs  library.rs  rtld.rs
src/api/: dl_find_object.rs  dl_iterate_phdr.rs  dladdr.rs  dlopen.rs  dlsym.rs  mod.rs
src/api/dlopen/: context.rs  mod.rs  planner.rs  resolver.rs
src/core_impl/: loader.rs  mod.rs  types.rs
src/core_impl/register/: lifecycle.rs  manager.rs  mod.rs
src/dlopen/: context.rs  ld_cache.rs  linker_script.rs  mod.rs  observer.rs  resolver.rs  run.rs
src/image/: address.rs  library.rs  mod.rs  observer.rs  types.rs
src/os/: linux.rs  mod.rs  unix.rs
src/registry/: cxa.rs  lifecycle.rs  loader_lock.rs  manager.rs  mod.rs  scope.rs
src/rtld/: bootstrap.rs  mod.rs  tls.rs
src/runtime/: debug.rs  host.rs  mod.rs  rtld.rs  state.rs
src/utils/: debug.rs
test-dylibs/promotion/: Cargo.toml  build.rs
tests/: all.rs  dlsym.rs  glibc_compat.rs  inode_check.rs  rtld_artifact.rs
tests/support/: mod.rs
