[package]
name = "dlopen-rs"
version = "0.8.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["wzhao <1207410841@qq.com>"]
readme = "README.md"
repository = "https://github.com/weizhiao/dlopen-rs"
keywords = ["dlopen", "elf", "unix", "loader"]
categories = ["no-std", "os", "embedded"]
license = "Apache-2.0"
description = "A dynamic linker fully implemented in Rust."
exclude = [".gitignore", "/example-dylib", "/test-dylibs", "check.sh"]

[workspace]
members = ["example-dylib", "test-dylibs/promotion", "cdylib", "rtld", "rtld/impl"]
resolver = "2"

[workspace.dependencies]
ctor = "1.0.7"
env_logger = "0.11.10"

[dependencies.spin]
version = "0.10.0"
default-features = false
features = ["rwlock", "lazy", "mutex", "spin_mutex"]

[dependencies.indexmap]
version = '2.9.0'
default-features = false

[dependencies.hashbrown]
version = "0.16.1"
default-features = false
features = ["default-hasher"]

[dependencies.elf_loader]
#version = "0.15.1"
git = "https://github.com/weizhiao/Relink.git"
default-features = false
features = ["log", "tls", "lazy-binding"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.171", default-features = false, optional = true }

[dependencies]
bitflags = "2.6.0"
log = { version = "0.4.22", default-features = false }
syscalls = { version = "0.8.1", default-features = false }
cfg-if = "1.0.0"
ctor = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["spin/std", "dep:ctor", "dep:libc", "elf_loader/libc", "log/std"]
# activate specific versions of symbols for dynamic library loading
version = ["elf_loader/version"]
use-syscall = ["elf_loader/use-syscall"]

[profile.release.package.rtld]
codegen-units = 1
opt-level = "s"

[profile.release]
panic = "abort"

[dev-dependencies]
criterion = "0.8.2"
libloading = "0.9.0"
env_logger = { workspace = true }

[[bench]]
name = "dlopen"
harness = false
required-features = []

[[bench]]
name = "dlopen_llvm"
harness = false
required-features = []

[[bench]]
name = "dlsym"
harness = false
required-features = []

[[bench]]
name = "dl_iterate_phdr"
harness = false
required-features = []

[[example]]
name = "dlopen"
required-features = []
