[package]
name = "rtld-impl"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
publish = false

[lib]
name = "rtld_impl"
crate-type = ["rlib"]
test = false
doctest = false

[dependencies]
dlopen-rs = { path = "../..", default-features = false, features = ["use-syscall"] }
spin = { version = "0.12.0", default-features = false, features = ["mutex", "spin_mutex"] }
syscalls = { version = "0.8.1", default-features = false }
